package com.qiniu.uicomp.pagerroom;

import android.net.Uri;

/**
 * 封面展示能力接口
 */
public interface ShowCoverAble {
    public Uri providePageCover();
}
