@startuml

title __PAGERROOM's Class Diagram__\n

  namespace com.qiniu.uicomp.pagerroom {
    class com.qiniu.uicomp.pagerroom.FixPagerSnapHelper {
        - mHorizontalHelper : OrientationHelper
        - mRecyclerView : RecyclerView
        - mVerticalHelper : OrientationHelper
        + attachToRecyclerView()
        + calculateDistanceToFinalSnap()
        + onFling()
        # createSnapScroller()
        - distanceToCenter()
        - getHorizontalHelper()
        - getVerticalHelper()
        - snapFromFling()
    }
  }
  

  namespace com.qiniu.uicomp.pagerroom {
    interface com.qiniu.uicomp.pagerroom.OnViewPagerListener {
        {abstract} + onInitComplete()
        {abstract} + onPageRelease()
        {abstract} + onPageSelected()
    }
  }
  

  namespace com.qiniu.uicomp.pagerroom {
    class com.qiniu.uicomp.pagerroom.PagerLayoutManager {
        - currentIndex : int
        - mChildAttachStateChangeListener : OnChildAttachStateChangeListener
        - mDrift : int
        - mRecyclerView : RecyclerView
        + PagerLayoutManager()
        + PagerLayoutManager()
        + onAttachedToWindow()
        + onLayoutChildren()
        + onScrollStateChanged()
        + scrollHorizontallyBy()
        + scrollVerticallyBy()
        + setOnViewPagerListener()
        + setViewGroup()
        - init()
        - realPosition()
    }
  }
  

  namespace com.qiniu.uicomp.pagerroom {
    interface com.qiniu.uicomp.pagerroom.PagerLayoutManager.IreloadInterface {
        {abstract} + onDestroyPage()
        {abstract} + onReloadPage()
    }
  }
  

  namespace com.qiniu.uicomp.pagerroom {
    interface com.qiniu.uicomp.pagerroom.ShowCoverAble {
        {abstract} + providePageCover()
    }
  }
  

  com.qiniu.uicomp.pagerroom.FixPagerSnapHelper -up-|> androidx.recyclerview.widget.PagerSnapHelper
  com.qiniu.uicomp.pagerroom.PagerLayoutManager -up-|> androidx.recyclerview.widget.LinearLayoutManager
  com.qiniu.uicomp.pagerroom.PagerLayoutManager o-- com.qiniu.uicomp.pagerroom.OnViewPagerListener : mOnViewPagerListener
  com.qiniu.uicomp.pagerroom.PagerLayoutManager o-- com.qiniu.uicomp.pagerroom.FixPagerSnapHelper : mPagerSnapHelper
  com.qiniu.uicomp.pagerroom.PagerLayoutManager +-down- com.qiniu.uicomp.pagerroom.PagerLayoutManager.IreloadInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
